app/styles/main.scss
$icon-font-path: "../bower_components/bootstrap-sass-official/assets/fonts/bootstrap/";
// bower:scss
@import "bootstrap-sass-official/assets/stylesheets/_bootstrap.scss";
// endbower

body, pre {
  font-family: 'Droid Arabic Naskh'
}

pre {
  background-color: #FFF;
  border: 0px solid #FFF;
}

